Bug fix: On Windows, unwanted wrapping of sidebar toolbar on standard resolution displays when sidebar at default width
(issue #49)
- Improved fix

--- a/src/pages/sidebar.css
+++ b/src/pages/sidebar.css
@@ -104,7 +104,7 @@ button, label {
 }
 
 body[data-os="win"] #add-link {
-    letter-spacing: -0.2px;
+    letter-spacing: -0.1px;
 }
 
 #add-link:hover {
@@ -127,7 +127,7 @@ body[data-os="win"] #add-link {
 }
 
 body[data-os="win"] #bookmark-filter > input[type="radio"] ~ label {
-    letter-spacing: -0.2px;
+    letter-spacing: -0.1px;
 }
 
 #add-link:hover,
